--- a/configs/roberta_base_rmse.yml
+++ b/configs/roberta_base_rmse.yml
@@ -2,17 +2,17 @@ key:
   k_fold: 5
   rng_seed: 0
   model_name: "roberta-base"
-  embedding_method: "last"
-  checkpoint_dir: "./checkpoints/roberta_base_0"
+  embedding_method: "last-avg"
+  checkpoint_dir: "./checkpoints/roberta_base_rmse"
 
   train_method: "vanilla"
   scheduler_method: 'cosine'
-  batch_size: 16
+  batch_size: 32
   max_epoch: 10
   weight_decay: 0.01
   optimizer_name: "AdamW"
-  lr: 5e-5
-  warmup_steps: 0
+  lr: 1e-4
+  warmup_proprotion: 0.1
 
   dataset_properties:
     -
