--- a/configs/debug.yml
+++ b/configs/debug.yml
@@ -2,27 +2,29 @@ key:
   k_fold: 5
   rng_seed: 0
   model_name: "roberta-base"
-  embedding_method: "last-avg"
+  embedding_method: "weight-pool"
   checkpoint_dir: "./checkpoints/debug"
 
   train_method: "vanilla"
   scheduler_method: 'cosine'
-  batch_size: 32
-  max_epoch: 5
+  batch_size: 16
+  max_epoch: 10
   weight_decay: 0.01
   optimizer_name: "AdamW"
   lr: 5e-5
   warmup_steps: 0
+  embedding_layer_start: 9
 
   dataset_properties:
     -
       name: commonlit
       task: "reg"
       train_data_path: "../data/train.csv"
-      text_column: 'excerpt'
+      text_column: 'text'
       num_classes: 1
       loss_name: 'MSE'
       evaluator: 'RMSE'
       log_every: 10
+      eval_every: 10
 
 
