--- a/configs/roberta_base_mse.yml
+++ b/configs/roberta_base_mse.yml
@@ -19,7 +19,7 @@ key:
       name: commonlit
       task: "reg"
       train_data_path: "../data/train.csv"
-      text_column: 'excerpt'
+      text_column: 'text'
       num_classes: 1
       loss_name: 'MSE'
       evaluator: 'RMSE'
