--- a/configs/roberta_base_rmse.yml
+++ b/configs/roberta_base_rmse.yml
@@ -8,10 +8,10 @@ key:
   train_method: "vanilla"
   scheduler_method: 'cosine'
   batch_size: 32
-  max_epoch: 10
+  max_epoch: 5
   weight_decay: 0.01
   optimizer_name: "AdamW"
-  lr: 1e-4
+  lr: 5e-5
   warmup_proprotion: 0.1
 
   dataset_properties:
@@ -19,10 +19,12 @@ key:
       name: commonlit
       task: "reg"
       train_data_path: "../data/train.csv"
-      text_column: 'excerpt'
+      text_column: 'text'
       num_classes: 1
       loss_name: 'RMSE'
       evaluator: 'RMSE'
       log_every: 10
+      eval_every: 70
+
 
 
