--- a/configs/debug.yml
+++ b/configs/debug.yml
@@ -4,6 +4,7 @@ key:
   model_name: "roberta-base"
   embedding_method: "weight-pool"
   checkpoint_dir: "./checkpoints/debug"
+  pretrained_dir: "./checkpoints/pretrained/roberta_base"
 
   train_method: "vanilla"
   scheduler_method: 'cosine'
@@ -21,10 +22,13 @@ key:
       task: "reg"
       train_data_path: "../data/train.csv"
       text_column: 'text'
-      num_classes: 1
-      loss_name: 'MSE'
+      loss_name: 'RMSE'
       evaluator: 'RMSE'
       log_every: 10
       eval_every: 10
+      branches:
+        - label
+      num_classes:
+        - 1
 
 
