--- a/configs/roberta_base_mse.yml
+++ b/configs/roberta_base_mse.yml
@@ -7,11 +7,11 @@ key:
 
   train_method: "vanilla"
   scheduler_method: 'cosine'
-  batch_size: 32
+  batch_size: 16
   max_epoch: 10
   weight_decay: 0.01
   optimizer_name: "AdamW"
-  lr: 1e-4
+  lr: 5e-5
   warmup_steps: 0
 
   dataset_properties:
@@ -20,9 +20,15 @@ key:
       task: "reg"
       train_data_path: "../data/train.csv"
       text_column: 'text'
-      num_classes: 1
       loss_name: 'MSE'
       evaluator: 'RMSE'
       log_every: 10
+      eval_every: 10
+      branches:
+        - label
+      num_classes:
+        - 1
+
+
 
 
