--- a/configs/roberta_base_rmse_more_eval.yml
+++ b/configs/roberta_base_rmse_more_eval.yml
@@ -3,7 +3,7 @@ key:
   rng_seed: 0
   model_name: "roberta-base"
   embedding_method: "last-avg"
-  checkpoint_dir: "./checkpoints/roberta_base_rmse"
+  checkpoint_dir: "./checkpoints/roberta_base_rmse_more_eval"
 
   train_method: "vanilla"
   scheduler_method: 'cosine'
@@ -20,16 +20,15 @@ key:
       task: "reg"
       train_data_path: "../data/train.csv"
       text_column: 'text'
+      num_classes: 1
       loss_name: 'RMSE'
       evaluator: 'RMSE'
       log_every: 10
-      eval_every: 70
+      eval_every: 10
       branches:
         - label
       num_classes:
         - 1
-
-
 
 
 
