--- a/configs/roberta_large.yml
+++ b/configs/roberta_large.yml
@@ -2,17 +2,19 @@ key:
   k_fold: 5
   rng_seed: 0
   model_name: "roberta-base"
-  embedding_method: "last-avg"
-  checkpoint_dir: "./checkpoints/roberta_base_rmse"
+  embedding_method: "weight-pool"
+  checkpoint_dir: "./checkpoints/roberta_base_dist_loss"
+  pretrained_dir: "./checkpoints/pretrained/roberta_base"
 
   train_method: "vanilla"
   scheduler_method: 'cosine'
   batch_size: 16
-  max_epoch: 5
+  max_epoch: 10
   weight_decay: 0.01
   optimizer_name: "AdamW"
   lr: 5e-5
-  warmup_proprotion: 0.1
+  warmup_steps: 0
+  embedding_layer_start: 9
 
   dataset_properties:
     -
@@ -20,16 +22,13 @@ key:
       task: "reg"
       train_data_path: "../data/train.csv"
       text_column: 'text'
-      loss_name: 'RMSE'
+      loss_name: 'dist'
       evaluator: 'RMSE'
       log_every: 10
-      eval_every: 70
+      eval_every: 10
       branches:
         - label
+        - standard_error
       num_classes:
         - 1
-
-
-
-
-
+        - 1
