--- a/configs/roberta_base_dist_loss.yml
+++ b/configs/roberta_base_dist_loss.yml
@@ -15,6 +15,8 @@ key:
   lr: 5e-5
   warmup_steps: 0
   embedding_layer_start: 9
+  hidden_dropout_prob: 0.0
+  attention_probs_dropout_prob: 0.0
 
   dataset_properties:
     -
