--- a/configs/roberta_base_warmup.yml
+++ b/configs/roberta_base_warmup.yml
@@ -4,17 +4,17 @@ key:
   model_type: "roberta"
   model_name: "roberta-base"
   embedding_method: "weight-pool"
-  checkpoint_dir: "./checkpoints/debug"
+  checkpoint_dir: "./checkpoints/roberta_base_warmup"
   pretrained_dir: "./checkpoints/pretrained/roberta_base"
 
   train_method: "vanilla"
-  scheduler_method: 'cosine'
+  scheduler_method: 'cosine_warmup'
   batch_size: 16
   max_epoch: 10
   weight_decay: 0.01
   optimizer_name: "AdamW"
   lr: 5e-5
-  warmup_steps: 0
+  warmup_proportion: 0.1
   embedding_layer_start: 9
   gradient_accumulation_steps: 1
   hidden_dropout_prob: 0.0
