--- a/configs/roberta_base_dist_loss.yml
+++ b/configs/roberta_base_dist_loss.yml
@@ -1,6 +1,7 @@
 key:
   k_fold: 5
   rng_seed: 0
+  model_type: "roberta"
   model_name: "roberta-base"
   embedding_method: "weight-pool"
   checkpoint_dir: "./checkpoints/roberta_base_dist_loss"
@@ -13,14 +14,16 @@ key:
   weight_decay: 0.01
   optimizer_name: "AdamW"
   lr: 5e-5
-  warmup_steps: 0
   embedding_layer_start: 9
   hidden_dropout_prob: 0.0
   attention_probs_dropout_prob: 0.0
+  gradient_accumulation_steps: 1
+  warmup_proportion: 0.0
 
   dataset_properties:
     -
       name: commonlit
+      dataset_class_name: commonlit
       task: "reg"
       train_data_path: "../data/train.csv"
       text_column: 'text'
@@ -29,8 +32,11 @@ key:
       log_every: 10
       eval_every: 10
       branches:
-        - label
+        - mean
         - standard_error
       num_classes:
         - 1
         - 1
+      last_layers:
+        - linear
+        - linear
