--- a/configs/roberta_base_warmup.yml
+++ b/configs/roberta_base_warmup.yml
@@ -23,6 +23,7 @@ key:
   dataset_properties:
     -
       name: commonlit
+      dataset_class_name: commonlit
       task: "reg"
       train_data_path: "../data/train.csv"
       text_column: 'text'
@@ -31,8 +32,11 @@ key:
       log_every: 10
       eval_every: 10
       branches:
-        - label
+        - mean
         - standard_error
       num_classes:
         - 1
         - 1
+      last_layers:
+        - linear
+        - linear
