--- a/configs/debug_reg.yml
+++ b/configs/debug_reg.yml
@@ -25,7 +25,7 @@ key:
       name: commonlit
       dataset_class_name: commonlit
       task: "reg"
-      train_data_path: "../data/train.csv"
+      train_data_path: "../data/train_squad.csv"
       text_column: 'text'
       loss_name: 'dist'
       evaluator: 'RMSE'
