--- a/configs/debug_reg.yml
+++ b/configs/debug_reg.yml
@@ -17,15 +17,16 @@ key:
   embedding_layer_start: 9
   warmup_proportion: 0.1
   gradient_accumulation_steps: 1
-  hidden_dropout_prob: 0.0
-  attention_probs_dropout_prob: 0.0
+  model_config_dict:
+    hidden_dropout_prob: 0.0
+    attention_probs_dropout_prob: 0.0
 
   dataset_properties:
     -
       name: commonlit
       dataset_class_name: commonlit
       task: "reg"
-      train_data_path: "../data/train_squad.csv"
+      train_data_path: "../data/train_with_fold.csv"
       text_column: 'text'
       loss_name: 'dist'
       evaluator: 'RMSE'
