--- a/configs/roberta_base_warmup_pseudo_label.yml
+++ b/configs/roberta_base_warmup_pseudo_label.yml
@@ -17,8 +17,9 @@ key:
   warmup_proportion: 0.1
   embedding_layer_start: 9
   gradient_accumulation_steps: 1
-  hidden_dropout_prob: 0.0
-  attention_probs_dropout_prob: 0.0
+  model_config_dict:
+    hidden_dropout_prob: 0.0
+    attention_probs_dropout_prob: 0.0
 
   dataset_properties:
     -
