--- a/configs/pseudo_label_squad.yml
+++ b/configs/pseudo_label_squad.yml
@@ -1,11 +1,13 @@
-seq_min_len: 150
-seq_max_len: 300
-pl_dataset_name: 'squad'
-pl_text_column: 'context'
-pl_split_names:
-  - 'train'
-  - 'validation'
-get_seq_method: 'vanilla'
-data_load_path: "../data/train_with_fold.csv"
-data_save_path: "../data/train_squad.csv"
-eval_batch_size: 16
+key:
+  seq_min_len: 150
+  seq_max_len: 300
+  load_dataset_param:
+    - 'squad'
+  pl_text_column: 'context'
+  pl_split_names:
+    - 'train'
+    - 'validation'
+  get_seq_method: 'vanilla'
+  data_load_path: "../data/train_with_fold.csv"
+  data_save_path: "../data/train_squad.csv"
+  eval_batch_size: 16
