--- a/configs/roberta_base_simplewiki_weebit_squad.yml
+++ b/configs/roberta_base_simplewiki_weebit_squad.yml
@@ -4,24 +4,19 @@ key:
   model_type: "roberta"
   model_name: "roberta-base"
   embedding_method: "weight-pool"
-  checkpoint_dir: "./checkpoints/debug"
+  checkpoint_dir: "./checkpoints/roberta_base_simplewiki_weebit_squad"
   pretrained_dir: "./checkpoints/pretrained/roberta_base"
 
-  train_method: "clean_finetune"
-  finetune_config:
-    max_epoch: 2
-    lr: 2e-5
-    scheduler_method: 'cosine'
-
-  scheduler_method: 'cosine'
+  train_method: "vanilla"
+  scheduler_method: 'cosine_warmup'
   batch_size: 16
   eval_batch_size: 32
-  max_epoch: 1
+  max_epoch: 5
   weight_decay: 0.01
   optimizer_name: "AdamW"
   lr: 5e-5
-  embedding_layer_start: 9
   warmup_proportion: 0.1
+  embedding_layer_start: 9
   gradient_accumulation_steps: 1
   model_config_dict:
     hidden_dropout_prob: 0.0
@@ -32,7 +27,7 @@ key:
       name: commonlit
       dataset_class_name: commonlit
       task: "reg"
-      train_data_path: "../data/train_weebit_squad.csv"
+      train_data_path: "../data/train_simplewiki_weebit_squad.csv"
       text_column: 'text'
       loss_name: 'dist'
       evaluator: 'RMSE'
@@ -47,3 +42,5 @@ key:
       last_layers:
         - linear
         - linear
+      # predict_method: 'knn'
+      # knn_k: 10
